Addressing warnings